--- a/CSS/style.css
+++ b/CSS/style.css
@@ -218,6 +218,7 @@ margin-left: -.6em;
     margin: .4em;
     padding-left: 1.1em;
     padding-right: 1.1em;
+    cursor: pointer;
 }
 
 .next {
@@ -231,5 +232,6 @@ margin-left: -.6em;
     margin: .4em;
     padding-left: 1.1em;
     padding-right: 1.1em;
+    cursor: pointer;
 }
 
