--- a/CSS/style.css
+++ b/CSS/style.css
@@ -278,7 +278,8 @@ margin-left: -.6em;
     margin-top: -17em;
     background-color: white;
     z-index: 1;
-    box-shadow: 0 0 15px 5px rgba(0, 0, 0, 0.3)
+    box-shadow: 0 0 15px 5px rgba(0, 0, 0, 0.3);
+    animation: fadeIn .3s ease-in;
 }
 
 .cart-section h3 {
