--- a/CSS/style.css
+++ b/CSS/style.css
@@ -497,21 +497,18 @@ font-weight: bold;
        margin-left: auto;
     }
 
-    .container {
-        display: flex;
-    }
-
     .carousel {
         width: 500px;
+        margin-left: -2em;
     }
 
     .main-img, .main-image2, .main-image3, .main-image4 {
-        width: 320px;
+        max-width: 320px; 
         border-radius: 8px;
     }
 
     .content {
-        width: 500px;
+        width: 400px;
     }
 
     .cart-button{
@@ -611,7 +608,7 @@ font-weight: bold;
     .container {
         display: flex;
         width: 700px;
-        margin-left: 8em;
+        margin-left: 3em;
         margin-right: 8em;
         padding-top: 2em;
     }
