--- a/CSS/style.css
+++ b/CSS/style.css
@@ -586,6 +586,7 @@ font-weight: bold;
 
     .content h2 {
         font-size: 2rem;
+        margin-bottom: .4em;
     }
 
     .last-price {
@@ -651,6 +652,10 @@ font-weight: bold;
         justify-content: center;
         margin: auto;
     }
+
+    .content {
+        margin-left: 2em;
+    }
 }
 
 @media screen and (min-width: 1100px) {
@@ -681,9 +686,6 @@ font-weight: bold;
         font-size: 2.5rem;
     }
 
-    .content {
-        margin-left: 2em;
-    }
 
     .description {
         font-size: .9rem;
